include/rusted_geom.h

// @generated by abi-gen
// version: 1.0.0
// abi_hash: 5e6878cb4cb395d1a3154ead424735a170510dadf75d5a8d7c8175e7b867461b
#ifndef RUSTED_GEOM_H
#define RUSTED_GEOM_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

typedef enum RgmStatus {
  RgmStatus_Ok = 0,
  RgmStatus_InvalidInput = 1,
  RgmStatus_NotFound = 2,
  RgmStatus_OutOfRange = 3,
  RgmStatus_DegenerateGeometry = 4,
  RgmStatus_NoConvergence = 5,
  RgmStatus_NumericalFailure = 6,
  RgmStatus_NotImplemented = 7,
  RgmStatus_InternalError = 255,
} RgmStatus;

typedef struct RgmKernelHandle {
  uint64_t field0;
} RgmKernelHandle;

typedef struct RgmObjectHandle {
  uint64_t field0;
} RgmObjectHandle;

typedef struct RgmPoint3 {
  double x;
  double y;
  double z;
} RgmPoint3;

typedef struct RgmToleranceContext {
  double abs_tol;
  double rel_tol;
  double angle_tol;
} RgmToleranceContext;

typedef struct RgmVec3 {
  double x;
  double y;
  double z;
} RgmVec3;

typedef struct RgmPlane {
  RgmPoint3 origin;
  RgmVec3 x_axis;
  RgmVec3 y_axis;
  RgmVec3 z_axis;
} RgmPlane;

RgmStatus rgm_alloc(size_t byte_len, size_t align, uint8_t** out_ptr);
size_t rgm_alloc_addr(size_t byte_len, size_t align);
RgmStatus rgm_curve_d0_at(RgmKernelHandle session, RgmObjectHandle curve, double t_norm, RgmPoint3* out_point);
RgmStatus rgm_curve_d0_at_length(RgmKernelHandle session, RgmObjectHandle curve, double distance_length, RgmPoint3* out_point);
RgmStatus rgm_curve_d1_at(RgmKernelHandle session, RgmObjectHandle curve, double t_norm, RgmVec3* out_d1);
RgmStatus rgm_curve_d1_at_length(RgmKernelHandle session, RgmObjectHandle curve, double distance_length, RgmVec3* out_d1);
RgmStatus rgm_curve_d2_at(RgmKernelHandle session, RgmObjectHandle curve, double t_norm, RgmVec3* out_derivative);
RgmStatus rgm_curve_d2_at_length(RgmKernelHandle session, RgmObjectHandle curve, double distance_length, RgmVec3* out_derivative);
RgmStatus rgm_curve_normal_at(RgmKernelHandle session, RgmObjectHandle curve, double t_norm, RgmVec3* out_normal);
RgmStatus rgm_curve_normal_at_length(RgmKernelHandle session, RgmObjectHandle curve, double distance_length, RgmVec3* out_normal);
RgmStatus rgm_curve_plane_at(RgmKernelHandle session, RgmObjectHandle curve, double t_norm, RgmPlane* out_plane);
RgmStatus rgm_curve_plane_at_length(RgmKernelHandle session, RgmObjectHandle curve, double distance_length, RgmPlane* out_plane);
RgmStatus rgm_curve_point_at(RgmKernelHandle session, RgmObjectHandle curve, double t_norm, RgmPoint3* out_point);
RgmStatus rgm_curve_point_at_length(RgmKernelHandle session, RgmObjectHandle curve, double distance_length, RgmPoint3* out_point);
RgmStatus rgm_curve_tangent_at(RgmKernelHandle session, RgmObjectHandle curve, double t_norm, RgmVec3* out_tangent);
RgmStatus rgm_curve_tangent_at_length(RgmKernelHandle session, RgmObjectHandle curve, double distance_length, RgmVec3* out_tangent);
RgmStatus rgm_dealloc(uint8_t* ptr, size_t byte_len, size_t align);
RgmStatus rgm_intersect_curve_curve(RgmKernelHandle session, RgmObjectHandle curve_a, RgmObjectHandle curve_b, size_t* out_count);
RgmStatus rgm_intersect_curve_plane(RgmKernelHandle session, RgmObjectHandle curve, RgmPlane plane, size_t* out_count);
RgmStatus rgm_kernel_create(RgmKernelHandle* out_session);
RgmStatus rgm_kernel_destroy(RgmKernelHandle session);
RgmStatus rgm_last_error_code(RgmKernelHandle session, int32_t* out_code);
RgmStatus rgm_last_error_message(RgmKernelHandle session, uint8_t* buffer, size_t buffer_len, size_t* out_written);
RgmStatus rgm_nurbs_interpolate_fit_points(RgmKernelHandle session, const RgmPoint3* points, size_t point_count, uint32_t degree, bool closed, RgmToleranceContext tol, RgmObjectHandle* out_object);
RgmStatus rgm_nurbs_interpolate_fit_points_ptr_tol(RgmKernelHandle session, const RgmPoint3* points, size_t point_count, uint32_t degree, bool closed, const RgmToleranceContext* tol, RgmObjectHandle* out_object);
RgmStatus rgm_object_release(RgmKernelHandle session, RgmObjectHandle object);

#endif // RUSTED_GEOM_H