bindings/dotnet/src/Generated/NativeMethods.g.cs

// <auto-generated />
// version: 1.0.0
// abi_hash: 5e6878cb4cb395d1a3154ead424735a170510dadf75d5a8d7c8175e7b867461b
using System.Runtime.InteropServices;

namespace RustedGeom.Generated;

internal static unsafe partial class NativeMethods
{
    internal const string NativeLibrary = "rusted_geom";

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_alloc")]
    internal static partial RgmStatus InteropAlloc(nuint byteLen, nuint align, IntPtr outPtr);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_alloc_addr")]
    internal static partial nuint InteropAllocAddr(nuint byteLen, nuint align);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_curve_d0_at")]
    internal static partial RgmStatus InteropCurveD0At(RgmKernelHandle session, RgmObjectHandle curve, double tNorm, out RgmPoint3 outPoint);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_curve_d0_at_length")]
    internal static partial RgmStatus InteropCurveD0AtLength(RgmKernelHandle session, RgmObjectHandle curve, double distanceLength, out RgmPoint3 outPoint);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_curve_d1_at")]
    internal static partial RgmStatus InteropCurveD1At(RgmKernelHandle session, RgmObjectHandle curve, double tNorm, out RgmVec3 outD1);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_curve_d1_at_length")]
    internal static partial RgmStatus InteropCurveD1AtLength(RgmKernelHandle session, RgmObjectHandle curve, double distanceLength, out RgmVec3 outD1);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_curve_d2_at")]
    internal static partial RgmStatus InteropCurveD2At(RgmKernelHandle session, RgmObjectHandle curve, double tNorm, out RgmVec3 outDerivative);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_curve_d2_at_length")]
    internal static partial RgmStatus InteropCurveD2AtLength(RgmKernelHandle session, RgmObjectHandle curve, double distanceLength, out RgmVec3 outDerivative);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_curve_normal_at")]
    internal static partial RgmStatus InteropCurveNormalAt(RgmKernelHandle session, RgmObjectHandle curve, double tNorm, out RgmVec3 outNormal);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_curve_normal_at_length")]
    internal static partial RgmStatus InteropCurveNormalAtLength(RgmKernelHandle session, RgmObjectHandle curve, double distanceLength, out RgmVec3 outNormal);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_curve_plane_at")]
    internal static partial RgmStatus InteropCurvePlaneAt(RgmKernelHandle session, RgmObjectHandle curve, double tNorm, out RgmPlane outPlane);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_curve_plane_at_length")]
    internal static partial RgmStatus InteropCurvePlaneAtLength(RgmKernelHandle session, RgmObjectHandle curve, double distanceLength, out RgmPlane outPlane);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_curve_point_at")]
    internal static partial RgmStatus InteropCurvePointAt(RgmKernelHandle session, RgmObjectHandle curve, double tNorm, out RgmPoint3 outPoint);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_curve_point_at_length")]
    internal static partial RgmStatus InteropCurvePointAtLength(RgmKernelHandle session, RgmObjectHandle curve, double distanceLength, out RgmPoint3 outPoint);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_curve_tangent_at")]
    internal static partial RgmStatus InteropCurveTangentAt(RgmKernelHandle session, RgmObjectHandle curve, double tNorm, out RgmVec3 outTangent);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_curve_tangent_at_length")]
    internal static partial RgmStatus InteropCurveTangentAtLength(RgmKernelHandle session, RgmObjectHandle curve, double distanceLength, out RgmVec3 outTangent);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_dealloc")]
    internal static partial RgmStatus InteropDealloc(byte* ptr, nuint byteLen, nuint align);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_intersect_curve_curve")]
    internal static partial RgmStatus InteropIntersectCurveCurve(RgmKernelHandle session, RgmObjectHandle curveA, RgmObjectHandle curveB, out nuint outCount);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_intersect_curve_plane")]
    internal static partial RgmStatus InteropIntersectCurvePlane(RgmKernelHandle session, RgmObjectHandle curve, RgmPlane plane, out nuint outCount);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_kernel_create")]
    internal static partial RgmStatus InteropKernelCreate(out RgmKernelHandle outSession);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_kernel_destroy")]
    internal static partial RgmStatus InteropKernelDestroy(RgmKernelHandle session);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_last_error_code")]
    internal static partial RgmStatus InteropLastErrorCode(RgmKernelHandle session, out int outCode);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_last_error_message")]
    internal static partial RgmStatus InteropLastErrorMessage(RgmKernelHandle session, byte* buffer, nuint bufferLen, out nuint outWritten);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_nurbs_interpolate_fit_points")]
    internal static partial RgmStatus InteropNurbsInterpolateFitPoints(RgmKernelHandle session, RgmPoint3* points, nuint pointCount, uint degree, [MarshalAs(UnmanagedType.I1)] bool closed, RgmToleranceContext tol, out RgmObjectHandle outObject);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_nurbs_interpolate_fit_points_ptr_tol")]
    internal static partial RgmStatus InteropNurbsInterpolateFitPointsPtrTol(RgmKernelHandle session, RgmPoint3* points, nuint pointCount, uint degree, [MarshalAs(UnmanagedType.I1)] bool closed, IntPtr tol, out RgmObjectHandle outObject);

    [LibraryImport(NativeLibrary, EntryPoint = "rgm_object_release")]
    internal static partial RgmStatus InteropObjectRelease(RgmKernelHandle session, RgmObjectHandle @object);

}
